clusters/homelab/apps/authentik/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  parentRefs:
    - name: wildcard
      namespace: networking
      sectionName: https
  hostnames:
    - auth.home.nomans.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authentik-server
          port: 80
